2003-04-21  James Henstridge  <james@daa.com.au>

	* bootstrap.py (bootstraps): move up to libtool-1.5, which is
	required to build fontconfig, etc from CVS.  Also add RH's
	ltmain-SED patch that patches over problems when people use old
	libtool.m4 with new ltmain.sh.

2003-04-21  Jens Finke  <jens@triq.net>

	* modulesets/gnome24.modules:
	* modulesets/gnome22.modules: Added eel dep for eog.

2003-04-21  Jon Svendsen  <jon-sven@frisurf.no>

	* modulesets/gnome20.modules: 
	* modulesets/gnome22.modules: 
	* modulesets/gnome24.modules: Added eog to meta-gnome-desktop in
	2.0, 2.2 and 2.4 modulesets (bug #108017).
 
2003-04-17  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome22.modules: Make gtkhtml depend on gal.
	
2003-04-14  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* module.py: Remove some more runsocks mumbo jumbo.
	* modulesets/gnome24.modules: gedit & glimmer now depend on
	gtksourceview revision "toward-gedit-integration".

2003-04-12  Mikael Hallendal  <micke@codefactory.se>

	* modulesets/gnome24.modules: Don't build bonobo-activation, moved 
	  the deps from bonobo-activation to libbonobo to be safe.

2003-04-11  Mikael Hallendal <micke@codefactory.se>

        * cvs.py: Removed sun runsocks mumbo jumbo... :)

2003-04-03  Bill Haneman <bill.haneman@sun.com>

	* modulesets/gnome24.modules: 
	* modulesets/gnome22.modules:
	remove redundant at-spi entries.

2003-04-02  Biswapesh Chattopadhyay  <biswapesh_chatterjee@tcscal.co.in>

	* modulesets/gnome22.modules: Use gnome-2-2 branch for librsvg
	* modulesets/gnome22.modules: Use gnome22branch for gnome-mime-data

2003-04-02  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome24.modules: libcroco is now a librsvg dependency

2003-04-01  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome24.modules: add galeon (was only in gnome22.modules)

2003-04-01  Bill Haneman <bill.haneman@sun.com>

	* modulesets/gnome24.modules: remove gnome-2-2 tag
	for atk, gail, and at-spi; 