@@ -1,5 +1,8 @@
 2003-04-21  James Henstridge  <james@daa.com.au>
 
+	* libtool-1.3.5-mktemp.patch: update to latest version from RH
+	packages, fixing a bug pointed out by Jeff.
+
 	* bootstrap.py (bootstraps): move up to libtool-1.5, which is
 	required to build fontconfig, etc from CVS.  Also add RH's
 	ltmain-SED patch that patches over problems when people use old
